--- a/socialPost.html
+++ b/socialPost.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="assets/css/socialPost.css">
     <title>Social Post</title>
 </head>
-<body>
-    
+<body></body>
+
     
 
     <script src="assets/js/socialPost.js"></script>
